--- a/style.css
+++ b/style.css
@@ -28,3 +28,36 @@ quote section bg-color:
 quote text:
 36px light italic #1F2937
 */
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    /* padding: 20px 100px 0; */
+}
+
+header {
+    background-color: #1f2937;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 150px;
+    margin-bottom: 50px;
+}
+
+.header-left p {
+    font-size: 24px;
+    color: #F9FAF8;
+}
+
+ul {
+    display: flex;
+    gap: 25px;
+    font-size: 18px; 
+    color: #E5E7EB;
+    list-style-type: none;
+}
