--- a/style.css
+++ b/style.css
@@ -45,8 +45,8 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 150px;
-    margin-bottom: 50px;
+    padding: 20px 250px;
+    /* margin-bottom: 50px; */
 }
 
 .header-left p {
@@ -60,4 +60,42 @@ ul {
     font-size: 18px; 
     color: #E5E7EB;
     list-style-type: none;
+}
+
+.hero {
+    background-color: #1f2937;
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+    padding: 50px 250px;
+    height: 350px;
+}
+
+.hero-text {
+    max-width: 400px;
+}
+
+.hero-text h1 {
+    color: #F9FAF8;
+    font-size: 48px;
+    font-weight: 900;
+    margin-bottom: 5px;
+}
+
+.hero-text p {
+    color: #E5E7EB;
+    font-size: 18px;
+    margin-bottom: 15px;
+}
+
+.hero img {
+    min-width: 500px;
+}
+
+.sign-up-button {
+    background-color: #3882F6;
+    color: #F9FAF8;
+    border-style: none;
+    border-radius: 5px;
+    padding: 5px 15px;
 }
