--- a/style.css
+++ b/style.css
@@ -99,3 +99,40 @@ ul {
     border-radius: 5px;
     padding: 5px 15px;
 }
+
+.random-info {
+    padding: 30px 250px;
+    margin-bottom: 50px;
+}
+
+.random-info h2 {
+    color: #1f2937;
+    text-align: center;
+    font-size: 36px;
+    font-weight: 900;
+    margin-bottom: 50px;
+}
+
+.random-boxes-container {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    display: flex;
+}
+
+.box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.box img {
+    width: 150px;
+    border-radius: 8px;
+    margin-bottom: 10px;
+}
+
+.box p {
+    width: 150px;
+}
