--- a/style.css
+++ b/style.css
@@ -134,5 +134,38 @@ ul {
 }
 
 .box p {
+    text-align: center;
     width: 150px;
 }
+
+.testimonial-section {
+    display: flex;
+    justify-content: center;
+    background-color: #E5E7EB;
+    padding: 80px 250px;
+    margin-bottom: 50px;
+}
+
+.quote-container {
+    display: flex;
+    flex-direction: column;
+    width: 800px;
+}
+
+.quote {
+    color: #1F2937;
+    font-size: 36px;
+    font-style: italic;
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.quote-author {
+    align-self: end;
+    font-size: 20px;
+    font-weight: 700;
+    width: 180px;
+    margin-top: 8px;
+}
+
+
